add distance slider

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,12 @@
   <body>
     <img id="source" src="input.png" />
     <canvas id="sc"></canvas>
+    <p id="controls">
+      <h3>Color Distance</h3>
+      <input id="distance" type="range" value="14" min="0" max = "360" />
+    </p>
     <p id ="out"></p>
+  
   
   </body>
 </html>
